--- a/package.json
+++ b/package.json
@@ -4,11 +4,18 @@
   "private": true,
   "dependencies": {
     "@material-ui/core": "^3.9.3",
+    "connected-react-router": "^6.4.0",
+    "history": "^4.9.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-redux": "^7.0.3",
     "react-router": "^5.0.0",
     "react-router-dom": "^5.0.0",
-    "react-scripts": "3.0.0"
+    "react-scripts": "3.0.0",
+    "react-text-mask": "^5.4.3",
+    "redux": "^4.0.1",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
