--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@material-ui/core": "^3.9.3",
     "connected-react-router": "^6.4.0",
+    "firebase": "^6.0.2",
     "history": "^4.9.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
